--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-shimmer": "^3.2.0",
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
